--- a/CSS/styleMain.css
+++ b/CSS/styleMain.css
@@ -80,8 +80,18 @@
     box-shadow: 5px 5px 5px #181818;
 }
 
+.imgCont {
+    display: flex;
+    justify-content: center;
+}
+
+.myCard {
+    width: 45rem;
+}
+
 .mainImg {
     height: 20rem;
+    padding: 1rem 0;
 }
 
 .mybody {
@@ -89,6 +99,7 @@
     grid-template-rows: 4rem 11rem 3rem;
     grid-template-columns: 1fr 1fr 3rem;
     grid-template-areas: "title title title" "des des des" "info like counter";
+    padding: 1rem 1rem 1rem 0;
 }
 
 .mytitle {
